--- a/strings/micropolisj/GuiStrings.properties
+++ b/strings/micropolisj/GuiStrings.properties
@@ -236,13 +236,17 @@ tool.QUERY.icon                = /icqry.png
 tool.QUERY.selected_icon       = /icqryhi.png
 tool.QUERY.tip                 = Query Zone Status
 tool.CLEANING_PARK.name                 = CLEANING PARK
-tool.CLEANING_PARK.icon                 = /icnew_building.png
-tool.CLEANING_PARK.selected_icon        = /icnew_buildinghi.png
+tool.CLEANING_PARK.icon                 = /iccleanhi.png
+tool.CLEANING_PARK.selected_icon        = /icclean.png
 tool.CLEANING_PARK.tip                  = Build Cleaning Park
 tool.CLEANING_STATION.name                 = CLEANING STATION
-tool.CLEANING_STATION.icon                 = /icnew_building.png
-tool.CLEANING_STATION.selected_icon        = /icnew_buildinghi.png
+tool.CLEANING_STATION.icon                 = /iccleanstationhi.png
+tool.CLEANING_STATION.selected_icon        = /iccleanstation.png
 tool.CLEANING_STATION.tip                  = Build Cleaning Station
+tool.CLEANING_TREE.name                 = CLEANING SUPER TREE
+tool.CLEANING_TREE.icon                 = /ictreehi.png
+tool.CLEANING_TREE.selected_icon        = /ictree.png
+tool.CLEANING_TREE.tip                  = Build Cleaning Super Tree
 
 tool.*.border                  = #bf7900
 tool.BULLDOZER.border          = #bf7900
